<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:src="@drawable/utilisateur"
            android:id="@+id/icone1"
            android:contentDescription="@string/nom"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAccent"
            android:layout_marginTop="5dp"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:hint="@string/nom"
                android:inputType="text"
                android:textSize="23sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:src="@drawable/password"
            android:id="@+id/icone2"
            android:contentDescription="@string/password"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAccent"
            android:layout_marginTop="5dp"
            app:passwordToggleEnabled="true"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="23sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_valider"
        android:textSize="23sp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/bouton_arrondi"
        android:layout_marginTop="38dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:textSize="23sp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/bouton_arrondi"
        android:layout_marginTop="38dp"
        />

</LinearLayout>